--- a/uotta2020/src/components/pages/signup/signup.css
+++ b/uotta2020/src/components/pages/signup/signup.css
@@ -24,7 +24,7 @@
 .left{
     width: 80%;
     color: rgba(67, 194, 73, 0.897);
-    background-image: url('./welcome.png');
+    background-image: url('./q.png');
     background-repeat:no-repeat;
     background-size: 100%;
 }
