--- a/uotta2020/src/components/pages/login/App.css
+++ b/uotta2020/src/components/pages/login/App.css
@@ -1,14 +1,16 @@
 .App {
   text-align: center;
+  height: 100vh;
+  width: 100vw;
 }
-.left{
-  width: 100%;
+.lefta{
+  width: 60%;
   background-image: url('./images.jpg');
   background-repeat:no-repeat;
   background-size: 100%;
 }
 
-.right{
+.righta{
   right: -100;
   width: 40%;
 }
@@ -40,7 +42,7 @@
   pointer-events: none;
 }
 
-.background{
+.ground{
   background-color: white;
   width: 50em;
   margin: auto;
