--- a/uotta2020/src/components/pages/signup/signup.css
+++ b/uotta2020/src/components/pages/signup/signup.css
@@ -60,3 +60,13 @@
 .form{
     border-radius: 0.5em;
 }
+.buttons{
+    width: 30%;
+    margin: 2em 0;
+    border-radius: 0.5em;
+    font-size: 1.5em;
+    font-weight: 600;
+    height: 6vh;
+    color: white;
+    border: black thin solid;
+  }
